--- a/css/app.css
+++ b/css/app.css
@@ -10,13 +10,10 @@ html {
 
 html,
 body {
-    width: 100%;
     height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 body {
@@ -30,11 +27,12 @@ body {
     align-items: center;
     flex-direction: column;
     position: relative;
-    max-width: 700px;
+    margin: 0 auto;
 }
 
 h1 {
     font-family: 'Open Sans', sans-serif;
+    font-size: 3.0em;
     font-weight: 300;
 }
 
@@ -102,8 +100,9 @@ h1 {
 
 .score-panel {
     text-align: left;
-    width: 345px;
+    width: 480px;
     margin-bottom: 10px;
+    font-size: 2.0em;
 }
 
 .score-panel .stars {
