--- a/css/app.css
+++ b/css/app.css
@@ -235,7 +235,7 @@ h1 {
 /*
  * Styles for the congratulations panel
  */
- 
+
 @keyframes congrats-animation {
     from {
         opacity: 0;
@@ -266,6 +266,7 @@ h1 {
 
 .congrats-panel h2 {
     text-align: center;
+    font-size: 2.0em;
 }
 
 .congrats-panel .stars {
@@ -283,6 +284,7 @@ h1 {
 
 .congrats-panel p {
     text-align: center;
+    font-size: 1.6em;
 }
 
 .congrats-panel.enabled {
@@ -295,6 +297,7 @@ h1 {
     background: linear-gradient(160deg, #79ee36 0%, #50914a 100%);
     padding: 10px;
     cursor: pointer;
+    font-size: 1.8em;
 }
 
 .congrats-panel p .disabled {
